src/tests/snapshots/tera__tests__parser__parser_errors@macro_default_non_literal.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/macro_default_non_literal.txt
---
 Syntax error --> [macro_default_non_literal.txt:1:21]
  |
1 | {% macro array(array=[a]) %}{% endmacro %}
  |                      ^---
  = Macro default arguments must only contain literals
